fix: fix horizontal scroll on mobiles

--- a/src/features/multivariate_layer/components/MultivariateDimensionDetails/MultivariateDimensionDetails.module.css
+++ b/src/features/multivariate_layer/components/MultivariateDimensionDetails/MultivariateDimensionDetails.module.css
@@ -21,3 +21,9 @@
   margin: var(--unit);
   margin-inline-start: calc(-1 * var(--unit));
 }
+
+@media screen and (max-width: 960px) {
+  .layerRow {
+    flex-direction: column;
+  }
+}
